--- a/Index.html
+++ b/Index.html
@@ -212,7 +212,7 @@
   <!-- Hlavní obsah -->
   <div class="main-content" id="mainContent">
     <div class="left">
-      <img src="nDRlTTUyll7Q0DKANmFw--0--fm6xa.jpeg" alt="Postava">
+      <img src="https://github.com/introduction2/Thar-Nek/blob/3de1912aae21c05306403ce13f9a2406dc4d454b/Rugged%20Alien%20Blacksmith%20Portrait%20With%20Glowing%20Orange%20Eyes.png" alt="Postava">
     </div>
     <div class="right">
       <div class="stars">
