--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <!-- Hlavní obsah -->
   <div class="main-content" id="mainContent">
     <div class="left">
-      <img src="https://raw.githubusercontent.com/introduction2/Thar-Nek/main/Rugged%20Alien%20Blacksmith%20Portrait%20With%20Glowing%20Orange%20Eyes.png"> alt="Postava">
+      <img src="https://raw.githubusercontent.com/introduction2/Thar-Nek/main/Rugged%20Alien%20Blacksmith%20Portrait%20With%20Glowing%20Orange%20Eyes.png"> <"alt="Postava">
     </div>
     <div class="right">
       <div class="stars">
