--- a/index.html
+++ b/index.html
@@ -214,6 +214,16 @@
     <div class="left">
       <img src="https://raw.githubusercontent.com/introduction2/Thar-Nek/main/Rugged%20Alien%20Blacksmith%20Portrait%20With%20Glowing%20Orange%20Eyes.png"> <alt="Postava">
     </div>
+
+    <form id="claimForm">
+  <input type="hidden" name="postava" value="Ro'Xazeel">
+  <label for="email">Zadej svůj e-mail (pro odemčení lore):</label><br>
+  <input type="email" name="email" required><br><br>
+  <button type="submit">Zapsat do sbírky</button>
+</form>
+
+<div id="result"></div>
+
     <div class="right">
       <div class="stars">
         <div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div><div class="star"></div>
@@ -241,36 +251,6 @@ I když vypadá jako unavený poutník, jeho ruce stále dokážou vytvarovat oc
     </div>
   </div>
 
-<form id="claimForm">
-<input type="hidden" name="postava" value="Ro'Xazeel">
-<label for="email">Zadej svůj e-mail (pro odemčení lore):</label><br>
-<input type="email" name="email" required><br><br>
-<button type="submit">Zapsat do sbírky</button>
-</form>
-
-<div id="result"></div>
-
-<script>
-document.getElementById("claimForm").addEventListener("submit", function(e) {
-e.preventDefault();
-const formData = new FormData(this);
-fetch("https://script.google.com/macros/s/AKfycbxVWzHN0sGmOTn2jqTR0TAnQQGng_6XvyYVhR6VuWbubnhOYFBKKLm7zf15YAtZqPVL/exec", {
-  method: "POST",
-  mode: "no-cors", // zásadní pro CORS blok
-  body: JSON.stringify(data),
-headers: {
-"Content-Type": "application/json"
-}
-})
-.then(res => res.json())
-.then(data => {
-document.getElementById("result").textContent = "Postava zapsána!";
-})
-.catch(() => {
-document.getElementById("result").textContent = "Nastala chyba.";
-});
-});
-</script>
 
 
   <script>
@@ -295,5 +275,34 @@ document.getElementById("result").textContent = "Nastala chyba.";
       }, 3000);
     });
   </script>
+
+  <script>
+document.getElementById("claimForm").addEventListener("submit", function(e) {
+  e.preventDefault();
+
+  const formData = new FormData(this);
+
+  const data = {
+    email: formData.get("email"),
+    postava: formData.get("postava")
+  };
+
+  fetch("https://script.google.com/macros/s/AKfycbxVWzHN0sGmOTn2jqTR0TAnQQGng_6XvyYVhR6VuWbubnhOYFBKKLm7zf15YAtZqPVL/exec", {
+    method: "POST",
+    mode: "no-cors",
+    body: JSON.stringify(data),
+    headers: {
+      "Content-Type": "application/json"
+    }
+  })
+  .then(() => {
+    document.getElementById("result").textContent = "Postava zapsána!";
+  })
+  .catch(() => {
+    document.getElementById("result").textContent = "Nastala chyba.";
+  });
+});
+</script>
+
 </body>
 </html>
