--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </div>
 
 <form id="claimForm">
-  <input type="hidden" name="postava" value="Ro'Xazeel">
+  <input type="hidden" name="postava" value="Thar´Nek">
   <label for="email">Zadej svůj e-mail (pro odemčení lore):</label><br>
   <input type="email" name="email" required><br><br>
   <button type="submit">Zapsat do sbírky</button>
