--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
   <!-- Hlavní obsah -->
   <div class="main-content" id="mainContent">
     <div class="left">
-      <img src="https://github.com/introduction2/Thar-Nek/blob/31941ad7aab05aaa6f77ef1f6f4b3e96550e57aa/Thar%C2%B4Nek.jpg"> <alt="Postava">
+      <img src="Thar´Nek.jpg"> <alt="Postava">
     </div>
 
 <form id="claimForm">
